chore: Prevent warning about the ByteBuddy agent